# WeChatDataAnalysis

./: .gitignore  pyproject.toml  微信备份4.0开发文档.md
desktop/: package-lock.json  package.json
desktop/scripts/: build-backend.cjs  build-icon.cjs  copy-ui.cjs  dev.cjs  installer-custom.nsh
desktop/src/: main.cjs  output-dir-worker.cjs  output-dir.cjs  preload.cjs  wcdb-sidecar.cjs
desktop/tests/: output-dir.test.cjs
frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/.claude/: launch.json
frontend/components/: ApiStatus.vue  BizMessages.vue  ChatLocationCard.vue  DesktopTitleBar.vue  DesktopUpdateDialog.vue  EditedMessagePreview.vue  GlobalExportDialog.vue  LivePhotoIcon.vue  SettingsDialog.vue  SidebarRail.vue  Stepper.vue
frontend/composables/: useApi.js  useApiBase.js  useDesktopUpdate.js  useSettingsDialog.js
frontend/lib/: api-settings.js  desktop-settings.js  privacy-mode.js  server-error-logging.js  ui-theme.js  wechat-emojis.ts  wechat-install-path.js
frontend/pages/: biz.vue  contacts.vue  decrypt-result.vue  decrypt.vue  detection-result.vue  import.vue  index.vue  sns.vue
frontend/plugins/: api-check.client.js  chat-media-perf.client.js  desktop-debug.client.js
frontend/stores/: app.js  chatAccounts.js  chatRealtime.js  imgHelper.js  privacy.js  theme.js
src/wechat_decrypt_tool/: __init__.py  api.py  app_paths.py  avatar_cache.py  backend_entry.py  chat_edit_store.py  chat_export_service.py  chat_helpers.py  chat_realtime_autosync.py  chat_search_index.py  database_filters.py  gpu_monitor.py  (+19 more)
(+90 files in other folders)
